# RideZone

./: .gitignore  README.md  pyproject.toml
data/processed/: chicago_features.parquet  features.parquet  moscow_features.parquet
data/raw/: moscow_hex_zones.csv  sample_zones.csv
docs/experiments/: metrics_folds.csv  metrics_summary.csv  stats.json
ridezone_ai/: __init__.py  cli.py  config.py  dashboard.py  data_loader.py  data_models.py  feature_engineering.py  modeling.py  optimizer.py  osm_moscow_builder.py  pipeline.py  reporting.py
scripts/: build_dashboard_data.py  build_moscow_dataset.py  generate_dataset.py  run_experiments.py
tests/: test_pipeline.py
web/: dashboard.html  dashboard_data.json
