[project]
name = "ridezone-ai"
version = "0.1.0"
description = "Forecasting optimal micromobility station zones"
authors = [{name = "RideZone", email = "team@ridezone.ai"}]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.25",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "joblib>=1.3",
    "pyarrow>=13.0",
    "osmnx>=2.0",
    "geopandas>=1.1",
    "shapely>=2.0",
    "h3>=4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4"
]

[project.scripts]
ridezone-ai = "ridezone_ai.cli:main"

[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ['ridezone_ai*']
